--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,10 @@
 .container {
-  margin: 20px auto;
+  margin: 20px 20px;
   width: 600px;
   padding: 0px 20px 20px 20px;
   border: 1px solid black;
   background-color: #ccc;
+  float: right;
 }
 th {
   text-align: left;
@@ -21,3 +22,39 @@ body {
   margin-top: 150px;
 }
 
+#links {
+  float: left;
+  margin: 50px 20px;
+}
+
+.styled-button {
+  background-color:#74A85B;
+  color:#fff;
+  font-family:'Helvetica Neue',sans-serif;
+  font-size:18px;
+  line-height:30px;
+  border-radius:20px;
+  -webkit-border-radius:20px;
+  -moz-border-radius:20px;
+  border:0;
+  text-shadow:#C17C3A 0 -1px 0;
+  width:120px;
+  height:32px
+}
+
+.styled-button-2 {
+  -webkit-box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
+  -moz-box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
+  box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
+  background-color:#5B74A8;
+  border:1px solid #29447E;
+  font-family:'Lucida Grande',Tahoma,Verdana,Arial,sans-serif;
+  font-size:20px;
+  font-weight:700;
+  padding:2px 6px;
+  height:28px;
+  color:#fff;
+  border-radius:5px;
+  -moz-border-radius:5px;
+  -webkit-border-radius:5px
+}
